--- a/css/styles.css
+++ b/css/styles.css
@@ -1,72 +1,52 @@
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../src/assets/fonts/icomoon.eot?vv1575');
+  src:  url('../src/assets/fonts/icomoon.eot?vv1575#iefix') format('embedded-opentype'),
+    url('../src/assets/fonts/icomoon.ttf?vv1575') format('truetype'),
+    url('../src/assets/fonts/icomoon.woff?vv1575') format('woff'),
+    url('../src/assets/fonts/icomoon.svg?vv1575#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  font-family: 'icomoon' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-notification:before {
+  content: "\e900";
+}
+.icon-play:before {
+  content: "\e901";
+}
+.icon-plus:before {
+  content: "\e902";
+}
+.icon-search:before {
+  content: "\e903";
+}
+.icon-star:before {
+  content: "\e904";
+}
+.icon-delete:before {
+  content: "\e905";
+}
+.icon-home:before {
+  content: "\e906";
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-/* .wrapper {
-  max-width: 1280px;
-  margin: auto;
-} */
-
-/* .header {
-  background: #0e3fa9;
-  margin-bottom: 2em;
-  text-align: center;
-}
-.header img {
-  width: 200px;
-  position: relative;
-  top: 20px;
-  filter: drop-shadow(3px 3px 0 #f2a30c);
-} */
-
-.actions {
-  display: flex;
-  gap: 21px;
-  padding: 1em 0 2em;
-}
-.actions > * {
-  position: relative;
-}
-.actions > *::after {
-  content: "/";
-  color: #3f69ff;
-  display: inline-flex;
-  position: absolute;
-  left: calc(100% + 10px);
-  text-align: center;
-  height: 100%;
-  top: 0;
-  display: flex;
-  align-items: center;
-}
-.actions > *::after:last-child {
-  display: none;
-}
-
-form {
-  /* border: 1px solid red; */
-  min-width: 320px;
-  display: flex;
-  gap: .5em;
-}
-input {
-  font-size: 1rem;
-  font-family: system-ui;
-  padding: .5em 1em;
-  flex: 1;
-}
-select {
-  font-size: 1rem;
-  padding: 0 1em;
-  border-radius: .5em;
-}
-button {
-  font-size: 1rem;
-  background: #3f69ff;
-  padding: 1em;
-  color: white;
-  border: none;
-  border-radius: .5em;
 }
 
 .movie-list {
