--- a/css/styles.css
+++ b/css/styles.css
@@ -1,48 +1,5 @@
-@font-face {
-  font-family: 'icomoon';
-  src:  url('../src/assets/fonts/icomoon.eot?vv1575');
-  src:  url('../src/assets/fonts/icomoon.eot?vv1575#iefix') format('embedded-opentype'),
-    url('../src/assets/fonts/icomoon.ttf?vv1575') format('truetype'),
-    url('../src/assets/fonts/icomoon.woff?vv1575') format('woff'),
-    url('../src/assets/fonts/icomoon.svg?vv1575#icomoon') format('svg');
-  font-weight: normal;
-  font-style: normal;
-  font-display: block;
-}
-
-[class^="icon-"], [class*=" icon-"] {
-  font-family: 'icomoon' !important;
-  speak: never;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.icon-notification:before {
-  content: "\e900";
-}
-.icon-play:before {
-  content: "\e901";
-}
-.icon-plus:before {
-  content: "\e902";
-}
-.icon-search:before {
-  content: "\e903";
-}
-.icon-star:before {
-  content: "\e904";
-}
-.icon-delete:before {
-  content: "\e905";
-}
-.icon-home:before {
-  content: "\e906";
-}
+@import './icons.css';
+@import './slick.css';
 
 body {
   margin: 0;
